--- a/_data/concepts.yml
+++ b/_data/concepts.yml
@@ -33,6 +33,7 @@ toc:
     - docs/concepts/cluster-administration/network-plugins.md
     - docs/concepts/cluster-administration/device-plugins.md
     - docs/concepts/cluster-administration/sysctl-cluster.md
+  - docs/concepts/service-catalog/index.md
 
 - title: Containers
   section:
